Fix z-index for animal pictures

--- a/themes/skyblue/css/node.css
+++ b/themes/skyblue/css/node.css
@@ -22,6 +22,8 @@
 
 .node-body {
   padding:0 0 30px 0;
+  position:relative;
+  z-index:2;
 }
 
   .node-body a {
